# poker_tracker

./: .env.example  .gitignore  BRANCHES_EXPLAINED.md  COLLABORATOR_SUMMARY.md  COMPLETE_SUMMARY.md  DEVELOPMENT_SERVER_STATUS.md  ENCYCLOPEDIA_LINKING_UPGRADE.md  FEATURES.md  FINAL_STATUS.md  FRIEND_SETUP_WINDOWS.md  GEMINI_SETUP.md  GITHUB_COLLABORATION_GUIDE.md  GITHUB_INSTRUCTIONS.md  HAND_ADVISOR_PLAN.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_STATUS.md  PLAY_MONEY_FEATURE.md  PROJECT_STATUS.md  QUICK_GITHUB_SETUP.md  QUICK_START.md  QUICK_START_FRIEND.md  README.md  README_GITHUB.md  REBUILD_SUMMARY.md  RECOMMENDED_MODELS.md  SETUP_COMPLETE.md  SETUP_GUIDE.md  SHARE_WITH_FRIEND.md  START_HERE.md  SUCCESS.md  VIRTUAL_ENVIRONMENT_GUIDE.md  WAKE_UP_README.md  WINDOWS_SETUP.md  ai_provider.py  analyze_hands.py  app.py  config.example.json  config.json  docker-compose.alt-ports.yml  docker-compose.dev.yml  (+17 more)
backend/: .env.example  AI_PROVIDER_INTEGRATION_SUMMARY.md  COMPREHENSIVE_ANALYSIS_IMPLEMENTATION_SUMMARY.md  CONCURRENT_PERFORMANCE_TESTING_SUMMARY.md  DATABASE.md  Dockerfile  Dockerfile.dev  EDUCATION_SYSTEM_IMPLEMENTATION.md  MIGRATIONS.md  RBAC_TEST_STATUS.md  README.md  SECURE_DATA_DELETION_TEST_SUMMARY.md  SECURITY_HARDENING_IMPLEMENTATION.md  SECURITY_IMPLEMENTATION.md  TASK_20_3_COMPLETION_SUMMARY.md  TASK_9_COMPLETION_SUMMARY.md  TASK_CONTINUATION_SUMMARY.md  VALIDATION_SUMMARY.md  alembic.ini  conftest.py  data_encryption_security_report.txt  dev_mode.py  manage_db.py  migrate.py  pyproject.toml  requirements.txt  run_dev.py  run_tests.py  security_scanner.py  (+78 more)
(+204 files in other folders)
